templates/habricentral/html/com_resources/create.css
@import url("/components/com_resources/assets/css/create.css");

.com_resources .type-button a:before {
	content: "\270D";
}
.com_resources .audi .type-button a:before {
	content: "\266B";
}
.com_resources .book .type-button a:before,
.com_resources .booksectio .type-button a:before {
	content: "\f02d";
}
.com_resources .magazinearticle .type-button a:before,
.com_resources .journalarticle .type-button a:before {
	content: "\f072";
}
.com_resources .governmentdocument .type-button a:before {
	content: "\f068";
}
.com_resources .video .type-button a:before {
	content: "\f008";
}
.com_resources .these .type-button a:before {
	content: "\f036";
}
.com_resources .dataset .type-button a:before {
	content: "\f001";
}
.com_resources .newspaperarticle .type-button a:before {
	content: "\f053";
}
.com_resources .presentation .type-button a:before {
	content: "\f000";
}
.com_resources .pamphlet .type-button a:before {
	content: "\f04a";
}
.com_resources .conferencepaper .type-button a:before {
	content: "\f0c5";
}
.com_resources .report .type-button a:before {
	content: "\f016";
}
.com_resources .poster .type-button a:before {
	content: "\f03e";
}
.com_resources .stillimage .type-button a:before {
	content: "\f08c";
}
.com_resources .tool .type-button a:before {
	content: "\2692";
}

.plg-content .sponsor-logo {
	text-align: center;
}
.plg-content .sponsor-logo a {
	border: none;
}
.aside .container p.wiki {
	padding-left: 27px;
	background: url("/components/com_resources/images/types/fc-wiki.gif") 4px 2px no-repeat;
}
.results {
	margin-top: 0;
}

.com_resources #hubForm .field-wrap {
	margin: 0;
}
#component-body,
#small-page {
	background: #F5F7F2;
}

#steps li {
	display: block;
	float: left;
	width: 70px;
	height: 70px;
	padding: 5px;
	text-align: center;
	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
	-webkit-border-radius: 80px;
	-moz-border-radius: 80px;
	border-radius: 80px;
	background: #e8e8e8;
	background: -webkit-gradient(linear, left top, left bottom, from(#e8e8e8), to(#f1f1f1));
	background: -webkit-linear-gradient(#e8e8e8, #f1f1f1);
	background: -moz-linear-gradient(center top, #e8e8e8 0%, #f1f1f1 100%);
	background: -moz-gradient(center top, #e8e8e8 0%, #f1f1f1 100%);
	background: -o-linear-gradient(#e8e8e8, #f1f1f1);
	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e8e8e8,endColorstr=#f1f1f1);
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e8e8e8, endColorstr=#f1f1f1)";
	position: relative;
}
#steps li.active strong,
#steps li.completed a,
#steps li span, 
#steps li#start a, 
#steps li#trash a,
#steps li a {
	font-weight: bold;
	text-align: center;
	font-size: 11px;
	display: block;
	width: 70px;
	height: 47px;
	padding: 23px 0 0 0;
	-webkit-border-radius: 70px;
	-moz-border-radius: 70px;
	border-radius: 70px;
	border: none;
	background: #f1f1f1;
	background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#f9f9f9));
	background: -webkit-linear-gradient(#ffffff, #f9f9f9);
	background: -moz-linear-gradient(center top, #ffffff 0%, #f9f9f9 100%);
	background: -moz-gradient(center top, #ffffff 0%, #f9f9f9 100%);
	background: -o-linear-gradient(#ffffff, #f9f9f9);
	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ffffff,endColorstr=#f9f9f9);
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ffffff, endColorstr=#f9f9f9)";
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0px 2px rgba(255, 255, 255, 0.8);
	color: #999;
	text-transform: uppercase;
	text-shadow: 0 1px 1px rgba(255, 255, 255, 1);
}
#steps li.completed a:hover,
#steps li a:hover {
	color: #696a9d;
	border: none;
}
#steps li:after {
	content: "";
	display: block;
	height: 5px;
	width: 2.2em;
	background: #e8e8e8;
	position: absolute;
	top: 50%;
	right: -2.1em;
	margin-top: -3px;
	z-index: 444;
	border-top: 2px solid #e1e1e1;
}
#steps li.completed {
}
#steps li.completed a {
	color: #555;
}
#steps li.active {
	background: #8586b9;
}
#steps li.active:before {
	content: "";
	display: block;
	width: 2px;
	height: 7px;
	background: #8586b9;
	position: absolute;
	top: 50%;
	left: 0;
	margin-top: -3px;
	z-index: 477;
}
#steps li.active:after {
	right: -2.2em;
}
#steps li.active strong {
	color: #696a9d;
}
#steps li:nth-child(6):after,
#steps li#start:after,
#steps li#trash:after {
	display: none;
}

#steps li#start,
#steps li#trash {
	background: transparent;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
	box-shadow: none;
	font-size: 1em;
	height: auto;
	width: auto;
	padding-top: 23px;
}
#steps li#trash.active strong,
#steps li#start a, 
#steps li#trash a {
	height: auto;
	width: auto;
	padding: 0.4em 0.91em 0.4em 2.91em;
	color: #555;
	text-align: center;
	text-shadow: 0px -1px 1px #1E2D4D;
	-webkit-background-clip: padding-box;
	display: inline-block;
	-webkit-border-radius: 0.25em;
	-moz-border-radius: 0.25em;
	border-radius: 0.25em;
	background: #e0e0e0;
	background: -webkit-gradient(linear, left top, left bottom, from(#FAFAFA), to(#e0e0e0));
	background: -webkit-linear-gradient(#FAFAFA, #e0e0e0);
	background: -moz-linear-gradient(center top, #FAFAFA 0%, #e0e0e0 100%);
	background: -moz-gradient(center top, #FAFAFA 0%, #e0e0e0 100%);
	background: -o-linear-gradient(#FAFAFA, #e0e0e0);
	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFAFA,endColorstr=#e0e0e0);
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFAFA, endColorstr=#e0e0e0)";
	border: 1px solid #CCC;
	-webkit-box-shadow: inset 0 0 1px #fff;
	-moz-box-shadow: inset 0 0 1px #fff;
	-ms-box-shadow: inset 0 0 1px #fff;
	box-shadow: inset 0 0 1px #fff;
	text-shadow: 0 1px 0 #fff;
	border-color: #CCC #CCC #AAA #AAA;
	outline: 0;
	font-weight: bold;
	font-size: 1em;
	white-space: nowrap;
	word-wrap: normal;
	vertical-align: middle;
	cursor: pointer;
	position: relative;
	text-transform: none;
}
#steps li#trash.active strong:before,
#steps li#start a:before, 
#steps li#trash a:before {
	background: rgba(0, 0, 0, 0.08);
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 1em;
	text-align: center;
	font-size: 1.2em;
	line-height: 2.2;
	padding: 0 0.5em;
	-webkit-border-radius: 0.25em 0 0 0.25em;
	-moz-border-radius: 0.25em 0 0 0.25em;
	border-radius: 0.25em 0 0 0.25em;
}
#steps li#start a:before {
	content: "\2190";
	font-family: 'Fontcons';
	margin-right: 0.2em;
}
#steps li#trash.active strong:before,
#steps li#trash a:before {
	content: "\f014";
	font-family: 'Fontcons';
	margin-right: 0.2em;
}
#steps li#start a:hover,
#steps li#trash a:hover {
	background: #e8e8e8;
	background: -webkit-gradient(linear, left top, left bottom, from(#f1f1f1), to(#e8e8e8));
	background: -webkit-linear-gradient(#f1f1f1, #e8e8e8);
	background: -moz-linear-gradient(center top, #f1f1f1 0%, #e8e8e8 100%);
	background: -moz-gradient(center top, #f1f1f1 0%, #e8e8e8 100%);
	background: -o-linear-gradient(#f1f1f1, #e8e8e8);
	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f1f1f1,endColorstr=#e8e8e8);
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f1f1f1, endColorstr=#e8e8e8)";
	border: 1px solid #aaaaaa;
	-webkit-box-shadow: inset 0 0 1px #fff, 0 0 2px rgba(0, 0, 0, 0.35);
	-moz-box-shadow: inset 0 0 1px #fff, 0 0 2px rgba(0, 0, 0, 0.35);
	-ms-box-shadow: inset 0 0 1px #fff, 0 0 2px rgba(0, 0, 0, 0.35);
	box-shadow: inset 0 0 1px #fff, 0 0 2px rgba(0, 0, 0, 0.35);
}
#steps li#trash {
	margin-right: 0;
}
#steps li#trash.active strong {
	height: auto;
	width: auto;
	text-shadow: 0 1px 0 white;
	display: inline-block;
	padding: 0.4em 0.91em 0.4em 2.91em;
	text-decoration: none;
	color: #555;
	border-color: #888 #AAA #CCC;
	-moz-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25),0 1px 0 white;
	-ms-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25),0 1px 0 white;
	-webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25),0 1px 0 white;
	box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25),0 1px 0 white;
	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#FFC8C8c8,EndColorStr=#FFE6E6e6);
	background-color: #E0E0E0;
	background-image: -moz-linear-gradient(top,#C8C8C8 0,#E6E6E6 100%);
	background-image: -ms-linear-gradient(top,#C8C8C8 0,#E6E6E6 100%);
	background-image: -o-linear-gradient(top,#C8C8C8 0,#E6E6E6 100%);
	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#C8C8C8),color-stop(100%,#E6E6E6));
	background-image: -webkit-linear-gradient(top,#C8C8C8 0,#E6E6E6 100%);
	background-image: linear-gradient(to bottom,#C8C8C8 0,#E6E6E6 100%);
	-webkit-border-radius: 0.25em;
	-moz-border-radius: 0.25em;
	border-radius: 0.25em;
}
#steps li#trash.active:before,
#steps li#trash.active:after {
	display: none;
}

